--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
         <!--<scope>test</scope>-->
         <!--</dependency>-->
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>2.0.2-beta</version>
