--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
             <artifactId>jcl-over-slf4j</artifactId>
             <version>1.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9</version>
+        </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -204,8 +209,7 @@
                     <reportSet>
                         <reports>
                             <report>cobertura</report>
-                        </reports>
-                    </reportSet>
+                        </reports>                         </reportSet>
                 </reportSets>
             </plugin>
             <!--<plugin>-->
