--- a/pom.xml
+++ b/pom.xml
@@ -166,11 +166,6 @@
             <artifactId>jcl-over-slf4j</artifactId>
             <version>1.7.1</version>
         </dependency>
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>2.9</version>
-        </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -214,6 +209,11 @@
     <reporting>
         <plugins>
             <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>LATEST</version>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <version>2.7</version>
@@ -221,7 +221,8 @@
                     <reportSet>
                         <reports>
                             <report>cobertura</report>
-                        </reports>                         </reportSet>
+                        </reports>
+                    </reportSet>
                 </reportSets>
             </plugin>
             <!--<plugin>-->
